fixing text overflow bug

--- a/src/style.css
+++ b/src/style.css
@@ -16,11 +16,9 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: max-content;
-    min-width: 30%;
+    width:max-content;
+    min-width: 500px;
     border: black 2px solid;
-    padding-left: 100px;
-    padding-right: 100px;
     min-height: 95vh;
     height: 90%;
 }
@@ -97,7 +95,7 @@ input{
     display: block;
     width: max-content;
     text-align: left;
-    margin-right: 100px;
+    margin: 10px;
 }
 
 .status-image{
@@ -111,12 +109,14 @@ input{
 
 #mission-list{
     list-style: none;
-    margin-right: 100px;
+    padding: 0px;
+    line-break:normal;
 }
 
 #mission-list > li{
     display: flex;
     justify-content:space-between;
+    width: 100%;
 }
 
 .bad{
@@ -140,7 +140,7 @@ input{
 .delete-button{
     right: 0;
     font-size: 10px;
-    padding: 0x 3px;
+    padding: 0x,3px;
     height: 20px;
     margin-top: auto;
     margin-bottom: auto;
@@ -173,7 +173,7 @@ input{
     }
     
     #main{
-        width: 80vw;
+        min-width: 80vw;
         height: 200px;
         padding-left:10px;
         padding-right: 10px;
@@ -186,22 +186,15 @@ input{
     }
 
     #control-section{
-        width: auto;
+        width: 80vw;
         text-align: center;
         display: block;
         margin-left: auto;
         margin-right: auto;
     }
 
-    #view-section{
-        margin: 0;
-        width: 100vw;
-    }
-
     #mission-list{
-        margin: 0px;
         padding: 0px;
-        max-width: 70vw;
     }
 
     button{
